--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
         <!-- Products Section -->
         <section id="products">
             <div class="products-banner">
-                <img src="steptodown.com202830.jpg" alt="Our Eco-Friendly Bottles">
+                <img src="image1.jpg" alt="Our Eco-Friendly Bottles">
                 <div class="banner-overlay">
                     <div class="banner-text">
                         <p>Connect with like-minded individuals and share your contributions to a sustainable future. Together, we can make a difference!</p>
@@ -40,7 +40,7 @@
             <div class="product-grid">
                 <div class="product">
                     <div class="product-image">
-                        <img src="v1017-60.jpg" alt="EcoBottle Classic">
+                        <img src="image3.jpg" alt="EcoBottle Classic">
                     </div>
                     <div class="product-info">
                         <h3>EcoBottle Classic</h3>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="product">
                     <div class="product-image">
-                        <img src="copper-wooden-water-bottle-500x500.webp" alt="EcoBottle Sport">
+                        <img src="image2.webp" alt="EcoBottle Sport">
                     </div>
                     <div class="product-info">
                         <h3>EcoBottle Wood</h3>
